Fix minor spelling error, add session form z-index

--- a/app/assets/stylesheets/forms/session.scss
+++ b/app/assets/stylesheets/forms/session.scss
@@ -4,6 +4,7 @@
   max-width: 428px;
   padding: 30px 16px;
   margin: 50px 0;
+  z-index: 2;
 }
 
 .session-form {
